--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #302e2b;
+}
 .all{
     display: flex;
     justify-content: center;
@@ -12,10 +15,10 @@
 .box2{
     width: 80px;
     height: 80px;
-    background-color: #8a785d;
+    background-color: #779952;
 }
 .box1{
     width: 80px;
     height: 80px;
-    background-color: #fccc74;
+    background-color: #edeed1;
 }
